feat: update cv with mentorship details, phd dissertation, and more

--- a/cv.tex
+++ b/cv.tex
@@ -146,40 +146,60 @@
 
 \begin{description}
   \item[2018 -- now] {
-    \textbf{PhD in Statistics}, \emph{Department of Statistics, Lund
-      University}
+        \textbf{PhD in Statistics}, \emph{Department of Statistics, Lund
+          University}
 
-    Supervisors: \emph{Jonas Wallin (main), Małgorzata Bogdan (co-supervisor)}
+        Supervisors: \emph{Jonas Wallin (main), Małgorzata Bogdan (co-supervisor)}
 
-    Note: \emph{Parental leave Jan--Aug 2023}
+        Note: \emph{Parental leave Jan--Aug 2023}
 
-    }
+        }
 
   \item[2018] {
-    \textbf{Bachelor's Degree in Statistics}, \emph{Lund University}
+        \textbf{Bachelor's Degree in Statistics}, \emph{Lund University}
 
-    Title: \emph{eulerr: Area-Proportional Euler Diagrams with Ellipses}
+        Title: \emph{eulerr: Area-Proportional Euler Diagrams with Ellipses}
 
-    Supervisor: \emph{Peter Gustafsson}
-    }
+        Supervisor: \emph{Peter Gustafsson}
+        }
 
-    % \item[2015 -- 2017] {
-    %   \textbf{Master's Degree in Medical Science}, \emph{Lund University}
+        % \item[2015 -- 2017] {
+        %       \textbf{Master's Degree in Medical Science}, \emph{Lund University}
+        %
+        %       Supervisor: \emph{Eva-Maj Malmström}
+        %
+        %       Title: \emph{Gym-based exercise therapy for patients with persistent
+        %         neck pain: A research protocol for a randomized controlled trial}
+        %       }
+        %
+        % \item[2011 -- 2014] {
+        %       \textbf{Bachelor's Degree in Physical Therapy}, \emph{Lund University}
+        %
+        %       Supervisor: \emph{Amanda Lundvik Gyllensten}
+        %
+        %       Title: \emph{The professional role and technology use among physical
+        %         therapists in Tokyo: A qualitative interview study}
+        %       }
+\end{description}
 
-    %   Supervisor: \emph{Eva-Maj Malmström}
+\section{Professional Experience}
 
-    %   Title: \emph{Gym-based exercise therapy for patients with persistent
-    %     neck pain: A research protocol for a randomized controlled trial}
-    %   }
+\begin{description}
+  \item[2018 -- 2024] {
+        \textbf{PhD Student}, \emph{Department of Statistics, Lund University}
 
-    % \item[2011 -- 2014] {
-    %   \textbf{Bachelor's Degree in Physical Therapy}, \emph{Lund University}
-
-    %   Supervisor: \emph{Amanda Lundvik Gyllensten}
-
-    %   Title: \emph{The professional role and technology use among physical
-    %     therapists in Tokyo: A qualitative interview study}
-    %   }
+        %Clinical work and quantitative assessment of sensory function.
+        }
+        % \item[2017 -- 2018] {
+        %       \textbf{Physical Therapist}, \emph{The Department of Orofacial Pain and Jaw Function, Malmö University}
+        %
+        %       %Clinical work and quantitative assessment of sensory function.
+        %       }
+        % \item[2014 -- 2018] {
+        %       \textbf{Physical Therapist}, \emph{Vårdcentralen Södra Sandby, Region Skåne}
+        %
+        %       %Clinical work at a primary care center in southern Skåne.
+        %       }
 \end{description}
 
 % \hypertarget{courses}{%
@@ -254,22 +274,6 @@
 %     \item[2016] \textbf{Conducting Systematic Reviews}, \emph{HTA-0, Malmö, Sweden}
 % \end{description}
 
-% \hypertarget{professional-experience}{%
-% \section{Professional Experience}\label{professional-experience}}
-
-% \begin{description}
-% \item[2017 -- 2018] {
-%     \textbf{Physical Therapist}, \emph{The Department of Orofacial Pain and Jaw Function, Malmö University}
-
-%     %Clinical work and quantitative assessment of sensory function.
-% }
-% \item[2014 -- 2018] {
-%     \textbf{Physical Therapist}, \emph{Vårdcentralen Södra Sandby, Region Skåne}
-
-%     %Clinical work at a primary care center in southern Skåne.
-% }
-% \end{description}
-
 % \section{Research}
 
 % \begin{description}
@@ -319,7 +323,9 @@
     labelwidth = \widthof{2018, June 18} + 1ex,
     leftmargin = \widthof{2018, June 18} + 1ex
   ]
+  \item[2024, Apr 10] {\textbf{Normalization for class-imbalanced binary features in regularized regression}, \emph{Uppsala Statistics Seminar Series}}
   \item[2021, Oct 27] {\textbf{Designing a Distance-Based Course in Data Visualization: Lessons Learned}, \emph{Cramér Society Fall Meeting}}
+  \item[2021, Nov 16] {\textbf{The Hessian Screening Rule}, \emph{Seminar at the Faculty of Pure and Applied Mathematics, Wrocław University of Science and Technology}}
   \item[2021, Sep 21] {\textbf{The Hessian Screening Rule and Adaptive Lasso Paths}, \emph{Statistics Seminar at the Department of Mathematical Statistics, Chalmers/Gothenburg University}}
   \item[2021, Sep 9] {\textbf{Look-Ahead Screening Rules for the Lasso}, \emph{EYSM 2021}}
   \item[2020, May 8] {\textbf{The Strong Screening Rule for SLOPE}, \emph{Statistical Learning Seminar}}
@@ -348,11 +354,11 @@
 
 \begin{description}
   \item[2020--2023]{
-              \textbf{Data Visualization}, \emph{Department of Statistics, Lund
-                University}
+        \textbf{Data Visualization}, \emph{Department of Statistics, Lund
+          University}
 
-              Distance-based course in data visualization for students on
-              the undergraduate level.
+        Distance-based course in data visualization for students on
+        the undergraduate level.
         }
 \end{description}
 
@@ -360,46 +366,48 @@
 
 \begin{description}
   \item[2023] {
-    \textbf{Bachelor's Thesis}, \emph{The Department of Statistics, Lund University}
+        \textbf{Bachelor's Thesis}, \emph{The Department of Statistics, Lund University}
 
-    Title: TBA
+        Title: Weather Factors and E. coli Concentration in Barnviken, Malmö -- A Linear Mixed Model Approach
 
-    Student: Elias Gullberg
-    }
+        Student: Elias Gullberg
+        }
   \item[2023] {
-    \textbf{Bachelor's Thesis}, \emph{The Department of Statistics, Lund University}
+        \textbf{Bachelor's Thesis}, \emph{The Department of Statistics, Lund University}
 
-    Title: TBA
+        Title: Exploring the Impact of Pseudo and Quasi Random Number Generators on Monte Carlo Integration of the Multivariate Normal Distribution
 
-    Students: Marcus Stolz, Jonathan Christopher
-    }
+        Students: Marcus Stolz, Jonathan Christopher
+        }
   \item[2022] {
-    \textbf{Master's Thesis}, \emph{Data Analysis and Business Analytics, Lund University}
+        \textbf{Master's Thesis}, \emph{Data Analysis and Business Analytics, Lund University}
 
-    Title: Interactive Network Visualization of Insurance Portfolios
+        Title: Interactive Network Visualization of Insurance Portfolios
 
-    Students: Gustavo Lemos Borba, Stella Sofia Sologaistoa Betancourt
-    }
-    \item[2019 -- 2021]{\textbf{Google Summer of Code}, \emph{The R Project for Statistical Computing}
+        Students: Gustavo Lemos Borba, Stella Sofia Sologaistoa Betancourt
+        }
+  \item[2019 -- 2021]{\textbf{Google Summer of Code}, \emph{The R Project for Statistical Computing}
 
-                Students: \emph{\href{https://summerofcode.withgoogle.com/archive/2019/projects/4654960430546944}{Qincheng Liu (2019)}, \href{https://summerofcode.withgoogle.com/archive/2020/projects/5476086193848320}{Akarsh Goyal (2020)}}
-          }
+        Students: \emph{\href{https://summerofcode.withgoogle.com/archive/2019/projects/4654960430546944}{Qincheng Liu (2019)}, \href{https://summerofcode.withgoogle.com/archive/2020/projects/5476086193848320}{Akarsh Goyal (2020)}}
+        }
 \end{description}
 
 \section{Referee Service}
 
 \begin{description}
-  \item[2021, 2022]{Advances in Neural Information Processing (NeurIPS)}
-  \item[2022]{International Conference for Machine Learning (ICML)}
+  \item[2024]{ICML, Computo}
+  \item[2023]{Journal of Computational and Graphical Statistics}
+  \item[2022, 2021]{NeurIPS}
+  \item[2022]{ICML}
 \end{description}
 
 \section{Comittee Service}
 
 \begin{description}
   \item[2020 -- 2022]{
-              \textbf{Statistical Learning Seminar Series}, Main Organizer
+        \textbf{Statistical Learning Seminar Series}, Main Organizer
 
-              \url{https://statistical-learning-seminars.github.io/}
+        \url{https://statistical-learning-seminars.github.io/}
         }
 \end{description}
 
@@ -410,29 +418,29 @@
     leftmargin = \widthof{qualpalr} + 1ex,
   ]
   \item[SLOPE] {
-    \textbf{Generalized linear models penalized with the sorted L1 norm}
+        \textbf{Generalized linear models penalized with the sorted L1 norm}
 
-    Author and maintainer, \texttt{R}, \url{https://CRAN.R-project.org/package=SLOPE}
-    }
+        Author and maintainer, \texttt{R}, \url{https://CRAN.R-project.org/package=SLOPE}
+        }
 
-    \item[benchopt]{
-                \textbf{Reproducible, efficient and collaborative optimization benchmarks}
+  \item[benchopt]{
+        \textbf{Reproducible, efficient and collaborative optimization benchmarks}
 
-                Contributor, \texttt{Python}, \url{https://benchopt.github.io/}
-          }
+        Contributor, \texttt{Python}, \url{https://benchopt.github.io/}
+        }
 
-    \item[eulerr]{
-                \textbf{Area-proportional Euler diagrams with ellipses}
+  \item[eulerr]{
+        \textbf{Area-proportional Euler diagrams with ellipses}
 
-                Author and maintainer, \texttt{R}, \url{https://CRAN.R-project.org/package=eulerr}
-          }
+        Author and maintainer, \texttt{R}, \url{https://CRAN.R-project.org/package=eulerr}
+        }
 
-    % \item[qualpalr] {
-    %   Automatic generation of qualitative color palettes using color difference
-    %   algorithms
-    %
-    %   \url{https://CRAN.R-project.org/package=qualpalr}
-    %   }
+        % \item[qualpalr] {
+        %   Automatic generation of qualitative color palettes using color difference
+        %   algorithms
+        %
+        %   \url{https://CRAN.R-project.org/package=qualpalr}
+        %   }
 
 \end{description}
 
@@ -444,9 +452,9 @@
   ]
 
   \item[2018]{
-              \textbf{Google Summer of Code}, \emph{The R Project for Statistical Computing}
+        \textbf{Google Summer of Code}, \emph{The R Project for Statistical Computing}
 
-              Project: \emph{\href{https://summerofcode.withgoogle.com/archive/2018/projects/6276491595743232/}{Fast Sparse Linear Models for Big Data with SAGA}}
+        Project: \emph{\href{https://summerofcode.withgoogle.com/archive/2018/projects/6276491595743232/}{Fast Sparse Linear Models for Big Data with SAGA}}
         }
 \end{description}
 
@@ -458,10 +466,10 @@
   ]
 
   \item[2021]{
-              \textbf{WHO Antimicrobial Resistance Dashboard}
+        \textbf{WHO Antimicrobial Resistance Dashboard}
 
-              Contracted work to develop and deploy a visualization dashboard for
-              WHO's Antimicrobial Resistance team in Europe.
+        Contracted work to develop and deploy a visualization dashboard for
+        WHO's Antimicrobial Resistance team in Europe.
         }
 \end{description}
 
