--- a/publications.bib
+++ b/publications.bib
@@ -7,7 +7,7 @@
   year          = {2018},
   month         = jun,
   booktitle     = {
-    Proceedings of {{International Workshop}} on {{Set Visualization} } and
+    Proceedings of {{International Workshop}} on {{Set Visualization}} and
     {{Reasoning}}
   },
   publisher     = {{CEUR Workshop Proceedings}},
@@ -26,7 +26,7 @@
   url           = {http://lup.lub.lu.se/student-papers/record/8934042},
   author+an     = {1=highlight},
   date          = {2018},
-  institution   = {{Lund University}},
+  institution   = {{Department of Statistics, Lund University}},
   abstract      = {
     Euler diagrams are common and intuitive visualizations for data involving sets and
     relationships thereof. Compared to Venn diagrams , Euler diagrams do not require
@@ -52,8 +52,6 @@
     eulerr's circular diagrams, meanwhile, fit better on all accounts save for the
     diagError metric in the case of three-set diagrams.
   },
-  editora       = {Gustafsson, Peter},
-  editoratype   = {collaborator},
   pagetotal     = {33},
   type          = {Bachelor thesis},
   keywords      = {thesis}
@@ -78,7 +76,7 @@
   pages         = {14592--14603},
   isbn          = {978-1-71382-954-6},
   url           = {
-    https://papers.nips.cc/paper_files/paper/2020/hash/a7d8ae4569120b5bec12e7b6e9648b86-Abstract.html
+    https://papers.nips.cc/paper\%5Ffiles/paper/2020/hash/a7d8ae4569120b5bec12e7b6e9648b86-Abstract.html
   },
   author+an     = {1=highlight},
   editor        = {
@@ -120,7 +118,7 @@
   publisher     = {{Panteion University of Social and Political Sciences}},
   pages         = {61--65},
   isbn          = {978-960-7943-23-1},
-  url           = {https://www.eysm2021.panteion.gr/files/Proceedings_EYSM_2021.pdf},
+  url           = {https://www.eysm2021.panteion.gr/files/Proceedings\%5FEYSM\%5F2021.pdf},
   author+an     = {1=highlight},
   editor        = {
     {Andreas Makridis} and {Fotios S. Milienos} and {Panagiotis Papastamoulis} and
@@ -163,7 +161,7 @@
   pages         = {25404--25421},
   isbn          = {978-1-71387-108-8},
   url           = {
-    https://proceedings.neurips.cc/paper_files/paper/2022/hash/a30769d9b62c9b94b72e21e0ca73f338-Abstract-Conference.html
+    https://proceedings.neurips.cc/paper\%5Ffiles/paper/2022/hash/a30769d9b62c9b94b72e21e0ca73f338-Abstract-Conference.html
   },
   author+an     = {12=highlight},
   editor        = {Koyejo, S. and Mohamed, S. and Agarwal, A. and Belgrave, D. and Cho, K. and Oh, A.},
@@ -204,7 +202,7 @@
   pages         = {15823--15835},
   isbn          = {978-1-71387-108-8},
   url           = {
-    https://papers.nips.cc/paper_files/paper/2022/hash/65a925049647eab0aa06a9faf1cd470b-Abstract-Conference.html
+    https://papers.nips.cc/paper\%5Ffiles/paper/2022/hash/65a925049647eab0aa06a9faf1cd470b-Abstract-Conference.html
   },
   author+an     = {1=highlight},
   editor        = {Koyejo, S. and Mohamed, S. and Agarwal, A. and Belgrave, D. and Cho, K. and Oh, A.},
@@ -265,4 +263,21 @@
   },
   eventtitle    = {{{AISTATS}} 2023},
   keywords      = {published-article}
+}
+
+@thesis{larsson2024,
+  title         = {
+    Optimization and Algorithms in Sparse Regression: Screening Rules, Coordinate
+    Descent, and Normalization
+  },
+  shorttitle    = {Optimization and Algorithms in Sparse Regression},
+  author        = {Larsson, Johan},
+  location      = {Lund, Sweden},
+  author+an     = {1=highlight},
+  type          = {phdthesis},
+  date          = {2024-05-20},
+  institution   = {Department of Statistics, Lund University},
+  langid        = {english},
+  pagetotal     = {277},
+  keywords      = {thesis}
 }
