feat: update date of phd

--- a/cv.tex
+++ b/cv.tex
@@ -145,7 +145,7 @@
 \section{Education}
 
 \begin{description}
-  \item[2018 -- now] {
+  \item[2018 -- 2024] {
         \textbf{PhD in Statistics}, \emph{Department of Statistics, Lund
           University}
 
